--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Malaysia Experience is an Online Travel Agency",
   "main": "backend/src/index.js",
   "scripts": {
-    "dev": "nodemon backend/src/index.js"
+    "dev": "nodemon backend/src/index.js",
+    "start": "node backend/src/index.js",
+    "build": "npm install && npm install --prefix client && npm run build --prefix client"
   },
   "author": "",
   "license": "ISC",
