--- a/client/package.json
+++ b/client/package.json
@@ -10,12 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.3",
     "framer-motion": "^11.0.24",
     "nanoid": "^5.0.6",
     "react": "^18.2.0",
+    "react-day-picker": "^8.10.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-icons": "^5.0.1",
+    "react-phone-number-input": "^3.3.12",
+    "react-redux": "^9.1.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.22.3"
   },
