--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.3",
+    "axios": "^1.6.8",
+    "date-fns": "^3.6.0",
     "framer-motion": "^11.0.24",
     "nanoid": "^5.0.6",
     "react": "^18.2.0",
