--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react-day-picker": "^8.10.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-phone-number-input": "^3.3.12",
     "react-redux": "^9.1.0",
