--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.6.8",
     "date-fns": "^3.6.0",
     "framer-motion": "^11.0.24",
+    "moment": "^2.30.1",
     "nanoid": "^5.0.6",
     "react": "^18.2.0",
     "react-day-picker": "^8.10.0",
