--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "Malaysia Experience is an Online Travel Agency",
   "main": "backend/src/index.js",
+  "engines": {
+    "node": "<=20.9.0"
+  },
   "scripts": {
     "dev": "nodemon backend/src/index.js",
     "start": "node backend/src/index.js",
